--- a/emacs.d/config.org
+++ b/emacs.d/config.org
@@ -1,10 +1,20 @@
+* General
+#+BEGIN_SRC emacs-lisp
+(setq vc-follow-symlinks t) ;; don't  ask for confirmation when operating symlinked files
+(setq frame-resize-pixelwise t)
+#+END_SRC
+* Magit
+#+BEGIN_SRC emacs-lisp
+
+#+END_SRC
 * Editorconfig
-  #+BEGIN_SRC 
-  (editorconfig-mode 1)
-  #+END_SRC
+#+BEGIN_SRC emacs-lisp
+(editorconfig-mode 1)
+#+END_SRC
 * Evil mode
 #+BEGIN_SRC emacs-lisp
   (evil-mode 1)
+  (evil-escape-mode 1)
   (evil-ex-define-cmd "q" 'kill-this-buffer)  ; prevent accidentally killing the frame
   (setq-default evil-escape-key-sequence "kj")
   (setq-default evil-escape-delay 0.2)
@@ -47,9 +57,9 @@ Override Emacs' default scrolling design: jumping half-page. Added "-aggressivel
 ** Better looks and defaults
 *** Setting default font
 #+BEGIN_SRC emacs-lisp
-      (set-face-attribute 'default nil :family "Iosevka" :height 170)
-      (set-face-attribute 'fixed-pitch nil :family "IosevkaCC")
-      (set-face-attribute 'variable-pitch nil :family "IBM Plex Mono")
+      (set-face-attribute 'default nil :family "Iosevka" :height 160)
+      (set-face-attribute 'fixed-pitch nil :family "Iosevka")
+      (set-face-attribute 'variable-pitch nil :family "Iosevka")
 #+END_SRC
 
 *** Improving / Cleaning up the UI.
@@ -70,7 +80,6 @@ Override Emacs' default scrolling design: jumping half-page. Added "-aggressivel
 #+BEGIN_SRC emacs-lisp
 ;; (olivetti-mode 1)  ;; Center text in the buffer
 ;; (flyspell-mode 1)  ;; Catch spelling mistakes
-;; (type-mode 1)      ;; Good for symbols like em-dash
 #+END_SRC
 
 *** No Backup~ Files
@@ -79,7 +88,26 @@ Override Emacs' default scrolling design: jumping half-page. Added "-aggressivel
   (setq auto-save-default nil)
   (setq create-lockfiles nil)
 #+END_SRC
-
+*** Make it very easy to see the line with cursor
+*** Display line numbers
+*** C-x k kills current buffer
+#+BEGIN_SRC emacs-lisp
+(global-set-key (kbd "C-x k")
+  '(lambda () (interactive) (kill-buffer (current-buffer))))
+#+END_SRC
+#+BEGIN_SRC emacs-lisp
+(column-number-mode t)
+#+END_SRC
+#+BEGIN_SRC emacs-lisp
+(global-hl-line-mode t)
+#+END_SRC
+* Fancy Battery
+#+BEGIN_SRC emacs-lisp
+(setq fancy-battery-show-percentage t)
+(setq battery-update-interval 15)
+(fancy-battery-mode)
+(display-battery-mode)
+#+END_SRC
 * Web mode
 #+BEGIN_SRC emacs-lisp
 (setq web-mode-content-types-alist '(("jsx" . "\\.js[x]?\\'")))
@@ -116,4 +144,41 @@ Override Emacs' default scrolling design: jumping half-page. Added "-aggressivel
   (lambda ()
     (when buffer-file-name
         (add-hook 'after-save-hook 'check-parens nil t))))
+#+END_SRC
+* Projectile
+#+BEGIN_SRC emacs-lisp
+(projectile-mode +1)
+(define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
+(define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
+(projectile-global-mode)
+(setq projectile-completion-system 'helm)
+(helm-projectile-on)
+#+END_SRC
+* Helm
+#+BEGIN_SRC emacs-lisp
+(require 'helm)
+(require 'helm-config)
+
+(global-set-key (kbd "M-x") 'helm-M-x)
+(global-set-key (kbd "M-y") 'helm-show-kill-ring)
+(global-set-key (kbd "C-x b") 'helm-mini)
+(global-set-key (kbd "C-x C-f") 'helm-find-files)
+
+(setq helm-M-x-fuzzy-match t   ; optional fuzzy matching for helm-M-x
+      helm-buffers-fuzzy-matching t
+      helm-recentf-fuzzy-match t
+      helm-split-window-in-side-p t ; open helm buffer inside current window, not occupy whole other window
+      helm-move-to-line-cycle-in-source t ; move to end or beginning of source when reaching top or bottom of source
+      helm-ff-search-library-in-sexp t ; search for library in `require` and `declare-function` sexp.
+      helm-scroll-amount 8
+      helm-ff-file-name-history-use-recentf t
+      helm-mode-fuzzy-match t
+      helm-semantic-fuzzy-match t
+      helm-imenu-fuzzy-match t
+      helm-echo-input-in-header-line t)
+
+(setq helm-autoresize-max-height 0)
+(setq helm-autoresize-min-height 20)
+(helm-autoresize-mode 1)
+(helm-mode 1)
 #+END_SRC
