--- a/emacs.d/config.org
+++ b/emacs.d/config.org
@@ -1,68 +1,32 @@
 * General
-#+BEGIN_SRC emacs-lisp
+** sanity
+  #+BEGIN_SRC emacs-lisp
+(custom-set-variables '(inhibit-startup-screen t))
 (setq vc-follow-symlinks t) ;; don't  ask for confirmation when operating symlinked files
 (setq frame-resize-pixelwise t)
-#+END_SRC
-* Magit
-#+BEGIN_SRC emacs-lisp
-
-#+END_SRC
-* Editorconfig
-#+BEGIN_SRC emacs-lisp
-(editorconfig-mode 1)
-#+END_SRC
-* Evil mode
-#+BEGIN_SRC emacs-lisp
-  (evil-mode 1)
-  (evil-escape-mode 1)
-  (evil-ex-define-cmd "q" 'kill-this-buffer)  ; prevent accidentally killing the frame
-  (setq-default evil-escape-key-sequence "kj")
-  (setq-default evil-escape-delay 0.2)
-#+END_SRC
-
-* Tab indents
+  #+END_SRC
+** Tab indents
 #+BEGIN_SRC emacs-lisp
   (setq-default tab-width 2)
   (setq-default indent-tabs-mode nil)
   (setq js-indent-level 2)
 #+END_SRC
-
-* Reload init.el
-#+BEGIN_SRC emacs-lisp
-  (defun khzaw/load-init()
-    "Reload .emacs.d/init.el"
-    (interactive)
-    (load-file "~/.emacs.d/init.el"))
-#+END_SRC
-
-* Smooth Scrolling
-Override Emacs' default scrolling design: jumping half-page. Added "-aggressively" to prevent the cursor to jump around when user scrolls.
-#+BEGIN_SRC emacs-lisp
-  (smooth-scrolling-mode 1)
-  (setq scroll-margin 1
-        smooth-scroll-margin 1
-        scroll-conservatively 0
-        scroll-up-aggressively 0.01
-        scroll-down-aggressively 0.01)
-  (setq-default scroll-up-aggressively 0.01
-                scroll-down-aggressively 0.01)
-#+END_SRC
-
-* Start-up
-** Maximize frame by default
-#+BEGIN_SRC emacs-lisp
-     (setq initial-frame-alist (quote ((fullscreen . maximized))))
-#+END_SRC
-
-** Better looks and defaults
-*** Setting default font
+** UI
+*** font
 #+BEGIN_SRC emacs-lisp
       (set-face-attribute 'default nil :family "Iosevka" :height 160)
       (set-face-attribute 'fixed-pitch nil :family "Iosevka")
       (set-face-attribute 'variable-pitch nil :family "Iosevka")
 #+END_SRC
-
-*** Improving / Cleaning up the UI.
+*** maximize frame by default
+#+BEGIN_SRC emacs-lisp
+     (setq initial-frame-alist (quote ((fullscreen . maximized))))
+#+END_SRC
+*** display column number
+#+BEGIN_SRC emacs-lisp
+(column-number-mode t)
+#+END_SRC
+** misc
 #+BEGIN_SRC emacs-lisp
   (setq inhibit-splash-screen t)
   (setq ring-bell-function 'ignore)
@@ -75,110 +39,197 @@ Override Emacs' default scrolling design: jumping half-page. Added "-aggressivel
   (setq-default line-spacing 3)
   (setq frame-title-format '("Emacs"))
   (set-window-margins (selected-window) 1 1)
-#+END_SRC
-*** Typography
-#+BEGIN_SRC emacs-lisp
-;; (olivetti-mode 1)  ;; Center text in the buffer
-;; (flyspell-mode 1)  ;; Catch spelling mistakes
-#+END_SRC
-
-*** No Backup~ Files
+  #+END_SRC
+** no backup~ files
 #+BEGIN_SRC emacs-lisp
   (setq make-backup-files nil)
   (setq auto-save-default nil)
   (setq create-lockfiles nil)
 #+END_SRC
-*** Make it very easy to see the line with cursor
-*** Display line numbers
-*** C-x k kills current buffer
+
+** C-x k kills current buffer
 #+BEGIN_SRC emacs-lisp
 (global-set-key (kbd "C-x k")
   '(lambda () (interactive) (kill-buffer (current-buffer))))
 #+END_SRC
+* Packages
+** fancy-battery
 #+BEGIN_SRC emacs-lisp
-(column-number-mode t)
+(use-package fancy-battery
+  :ensure t
+  :config
+   (setq fancy-battery-show-percentage t)
+   (setq battery-update-interval 15)
+   (fancy-battery-mode)
+   (display-battery-mode))
 #+END_SRC
+** which-key
 #+BEGIN_SRC emacs-lisp
-(global-hl-line-mode t)
+(use-package which-key :ensure t)
 #+END_SRC
-* Fancy Battery
+** editorconfig
 #+BEGIN_SRC emacs-lisp
-(setq fancy-battery-show-percentage t)
-(setq battery-update-interval 15)
-(fancy-battery-mode)
-(display-battery-mode)
+(use-package editorconfig
+  :ensure t
+  :config
+    (editorconfig-mode 1)
+)
 #+END_SRC
-* Web mode
+** evil
 #+BEGIN_SRC emacs-lisp
-(setq web-mode-content-types-alist '(("jsx" . "\\.js[x]?\\'")))
-(defun web-mode-init-hook ()
-  "Hooks for web mode. Adjust indent."
-  (setq web-mode-markup-indent-offset 2))
-(add-hook 'web-mode-hook 'web-mode-init-hook)
+(use-package evil
+  :ensure t
+  :defer .1 ;; don't block emacs when starting, load evil immediately after startup
+  :init
+    (setq evil-vsplit-window-right t) ;; like vim's 'splitright'
+    (setq evil-split-window-below t) ;; like vim's 'splitbelow'
+    (evil-mode 1)
+)
+(use-package key-chord
+  :ensure key-chord
+  :demand key-chord
+  :init (key-chord-mode 1)
+  :config
+  (progn
+    (key-chord-define evil-insert-state-map "kj" 'evil-normal-state)))
+#+END_SRC
 
-(defun init-prettier-hook ()
-  (add-node-modules-path)
-  (prettier-js-mode))
-
-(add-hook 'js-mode-hook 'init-prettier-hook)
-#+END_SRC
-* Text mode
+** magit
 #+BEGIN_SRC emacs-lisp
-(add-hook 'text-mode-hook
-(lambda ()
-(variable-pitch-mode 1)))
-#+END_SRC
-
-* Protobuf mode
+(use-package magit
+  :config
+  (global-set-key (kbd "C-x g") 'magit-status))
+   #+END_SRC
+** smooth-scrolling
+   Override Emacs' default scrolling design: jumping half-page. Added "-aggressively" to prevent the cursor to jump around when user scrolls.
 #+BEGIN_SRC emacs-lisp
-(defconst my-protobuf-style
-  '((c-basic-offset . 2)
-    (indent-tabs-mode . nil)))
-
-(add-hook 'protobuf-mode-hook
-  (lambda () (c-add-style "my-style" my-protobuf-style t)))
+(use-package smooth-scrolling
+  :config
+  (setq scroll-margin 1
+        smooth-scroll-margin 1
+        scroll-conservatively 0
+        scroll-up-aggressively 0.01
+        scroll-down-aggressively 0.01)
+  (smooth-scrolling-mode 1))
 #+END_SRC
-* Markdown mode
+** web-mode
 #+BEGIN_SRC emacs-lisp
-(add-hook 'markdown-mode-hook
-  (lambda ()
-    (when buffer-file-name
-        (add-hook 'after-save-hook 'check-parens nil t))))
+  (use-package web-mode
+    :ensure t
+    :config
+      (setq web-mode-content-types-alist '(("jsx" . "\\.js[x]?\\'")))
+      (setq web-mode-markup-indent-offset 2
+            web-mode-code-indent-offset 2
+            web-mode-css-indent-offset 2
+            web-mode-style-padding 2
+            web-mode-script-padding 2
+            web-mode-block-padding 2)
+    )
 #+END_SRC
-* Projectile
+** prettier-js
+   #+BEGIN_SRC emacs-lisp
+     (use-package prettier-js
+       :init
+       (add-hook 'js2-mode-hook 'prettier-js-mode))
+
+   #+END_SRC
+
+** org
+   #+BEGIN_SRC emacs-lisp
+     (setq org-src-tab-acts-natively t)  
+   #+END_SRC
+** org-bullets
+   #+BEGIN_SRC emacs-lisp
+   (use-package org-bullets
+     :ensure t
+     :config
+     (add-hook 'org-mode-hook 'org-bullets-mode))
+   #+END_SRC
+** aggressive-indent
+   #+BEGIN_SRC emacs-lisp
+   (use-package aggressive-indent :ensure t)
+   #+END_SRC
+** helm
+   #+BEGIN_SRC emacs-lisp
+   (use-package helm
+     :ensure t
+     :bind (("M-x" . helm-M-x)
+            ("M-y" . helm-show-kill-ring)
+            ("C-x b" . helm-mini)
+            ("C-x C-f" . helm-find-files))
+     :config
+     (progn 
+        (setq helm-M-x-fuzzy-match t   ; optional fuzzy matching for helm-M-x
+            helm-buffers-fuzzy-matching t
+            helm-recentf-fuzzy-match t
+            helm-split-window-in-side-p t ; open helm buffer inside current window, not occupy whole other window
+            helm-move-to-line-cycle-in-source t ; move to end or beginning of source when reaching top or bottom of source
+            helm-ff-search-library-in-sexp t ; search for library in `require` and `declare-function` sexp.
+            helm-scroll-amount 8
+            helm-ff-file-name-history-use-recentf t
+            helm-mode-fuzzy-match t
+            helm-semantic-fuzzy-match t
+            helm-imenu-fuzzy-match t
+            helm-echo-input-in-header-line t))
+    )
+   #+END_SRC
+** helm-ag
+   #+BEGIN_SRC emacs-lisp
+   (use-package helm-ag
+     :ensure helm-ag
+   )
+   #+END_SRC
+** projectile
+   #+BEGIN_SRC emacs-lisp
+   (use-package projectile
+     :ensure t
+     :config
+       (projectile-mode)
+        (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
+        (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
+        (projectile-global-mode)
+        (setq projectile-completion-system 'helm)
+   )
+   #+END_SRC
+** helm-projectile
+   #+BEGIN_SRC emacs-lisp
+   (use-package helm-projectile
+     :ensure t
+     :bind ("M-t" . helm-projectile-find-file)
+     :config
+       (helm-projectile-on)
+   )
+   #+END_SRC
+** protobuf-mode
+   #+BEGIN_SRC emacs-lisp
+   (use-package protobuf-mode
+     :ensure t
+     :mode ("\\.proto\\'" . protobuf-mode))
+   #+END_SRC
+** markdown
+   #+BEGIN_SRC emacs-lisp
+   (use-package markdown-mode
+     :ensure t
+     :mode (("\\.md\\'" . markdown-mode)
+            ("\\.markdown\\'" . markdown-mode)))
+   #+END_SRC
+** restart-emacs
+   #+BEGIN_SRC emacs-lisp
+    (use-package restart-emacs :ensure t)
+   #+END_SRC
+** themes
+   #+BEGIN_SRC emacs-lisp
+     (use-package doom-themes
+        :ensure t
+        :config
+            (setq doom-themes-enable-bold t
+                  doom-themes-enable-italic t)
+            (load-theme 'doom-dracula t))
+   #+END_SRC
+* Reload init.el
 #+BEGIN_SRC emacs-lisp
-(projectile-mode +1)
-(define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
-(define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
-(projectile-global-mode)
-(setq projectile-completion-system 'helm)
-(helm-projectile-on)
-#+END_SRC
-* Helm
-#+BEGIN_SRC emacs-lisp
-(require 'helm)
-(require 'helm-config)
-
-(global-set-key (kbd "M-x") 'helm-M-x)
-(global-set-key (kbd "M-y") 'helm-show-kill-ring)
-(global-set-key (kbd "C-x b") 'helm-mini)
-(global-set-key (kbd "C-x C-f") 'helm-find-files)
-
-(setq helm-M-x-fuzzy-match t   ; optional fuzzy matching for helm-M-x
-      helm-buffers-fuzzy-matching t
-      helm-recentf-fuzzy-match t
-      helm-split-window-in-side-p t ; open helm buffer inside current window, not occupy whole other window
-      helm-move-to-line-cycle-in-source t ; move to end or beginning of source when reaching top or bottom of source
-      helm-ff-search-library-in-sexp t ; search for library in `require` and `declare-function` sexp.
-      helm-scroll-amount 8
-      helm-ff-file-name-history-use-recentf t
-      helm-mode-fuzzy-match t
-      helm-semantic-fuzzy-match t
-      helm-imenu-fuzzy-match t
-      helm-echo-input-in-header-line t)
-
-(setq helm-autoresize-max-height 0)
-(setq helm-autoresize-min-height 20)
-(helm-autoresize-mode 1)
-(helm-mode 1)
+  (defun khzaw/load-init()
+    "Reload .emacs.d/init.el"
+    (interactive)
+    (load-file "~/.emacs.d/init.el"))
 #+END_SRC
