--- a/emacs.d/config.org
+++ b/emacs.d/config.org
@@ -16,9 +16,9 @@
 ** UI
 *** font
     #+BEGIN_SRC emacs-lisp
-      (set-face-attribute 'default nil :family "Dank Mono" :height 140)
-      (set-face-attribute 'fixed-pitch nil :family "Dank Mono")
-      (set-face-attribute 'variable-pitch nil :family "Dank Mono")
+      (set-face-attribute 'default nil :family "Fira Code" :height 140)
+      (set-face-attribute 'fixed-pitch nil :family "Fira Code")
+      (set-face-attribute 'variable-pitch nil :family "Fira Code")
     #+END_SRC
 *** maximize frame by default
 #+BEGIN_SRC emacs-lisp
@@ -56,6 +56,18 @@
   '(lambda () (interactive) (kill-buffer (current-buffer))))
 #+END_SRC
 * Packages
+** exec-path-from-shell
+   #+begin_src emacs-lisp
+     (use-package exec-path-from-shell
+       :ensure t
+       :if (memq window-system '(mac ns x))
+       :config
+       (setenv "SHELL" "/usr/local/bin/zsh")
+       (setq exec-path-from-shell-variables '("PATH" "GOPATH"))
+       (exec-path-from-shell-initialize)
+       )
+
+   #+end_src
 ** doom-modeline
    #+BEGIN_SRC emacs-lisp
     (use-package doom-modeline
@@ -104,10 +116,10 @@
 #+END_SRC
 
 ** magit
-#+BEGIN_SRC emacs-lisp
-(use-package magit
-  :config
-  (global-set-key (kbd "C-x g") 'magit-status))
+   #+BEGIN_SRC emacs-lisp
+     (use-package magit
+       :config
+       (global-set-key (kbd "C-x g") 'magit-status))
    #+END_SRC
 ** smooth-scrolling
    Override Emacs' default scrolling design: jumping half-page. Added "-aggressively" to prevent the cursor to jump around when user scrolls.
@@ -141,20 +153,32 @@
    #+BEGIN_SRC emacs-lisp
      (use-package prettier-js
        :ensure t
-       :init
-       (add-hook 'js-mode-hook 'prettier-js-mode))
-
+       :config
+       (add-hook 'js-mode-hook 'prettier-js-mode)
+       (add-hook 'web-mode-hook 'prettier-js-mode)
+       )
    #+END_SRC
+** js2-mode
+   #+begin_src emacs-lisp
+     (use-package js2-mode
+       :ensure t
+       :config 
+       (add-hook 'js-mode-hook 'js2-minor-mode)
+       (setq js2-strict-missing-semi-warning nil)
+       (setq js2-missing-semi-one-line-override t)
+       )
+   #+end_src
 ** add-node-modules-path
    #+BEGIN_SRC emacs-lisp
      (use-package add-node-modules-path
-:ensure t
-:init
-(add-hook 'web-mode-hook 'add-node-modules_path))
+       :ensure t
+       :config
+       (add-hook 'js-mode-hook 'add-node-modules-path)
+       (add-hook 'web-mode-hook 'add-node-modules-path))
    #+END_SRC
 ** org
    #+BEGIN_SRC emacs-lisp
-     (use-package org-mode
+     (use-package org
        :config
        (setq org-src-fontify-natively t) ;; fontify code in code blocks
        (setq org-src-tab-acts-natively t)
@@ -164,7 +188,7 @@
 ** org-tempo
    Template expansion of Org structures
    #+begin_src emacs-lisp
-    (use-package org-tempo :ensure t :after org)
+    (use-package org-tempo :after org :ensure nil)
    #+end_src
 
 ** org-bullets
@@ -180,27 +204,30 @@
    #+END_SRC
 ** helm
    #+BEGIN_SRC emacs-lisp
-               (use-package helm
-                 :ensure t
-                 :bind (("M-x" . helm-M-x)
-                        ("C-x b" . helm-buffers-list)
-                        ("C-x C-f" . helm-find-files))
-                 :init
-                 (setq helm-M-x-fuzzy-match t
-                       helm-buffers-fuzzy-matching t
-                       helm-recentf-fuzzy-match t
-                       ;; helm-split-window-in-side-p t ; open helm buffer inside current window, not occupy whole other window
-                       ;; helm-move-to-line-cycle-in-source t ; move to end or beginning of source when reaching top or bottom of source
-                       ;; helm-ff-search-library-in-sexp t ; search for library in `require` and `declare-function` sexp.
-                       ;; helm-scroll-amount 8
-                       ;; helm-ff-file-name-history-use-recentf t
-                       ;; helm-mode-fuzzy-match t
-                       ;; helm-semantic-fuzzy-match t
-                  )
-     :config
-     (helm-mode 1)
-     (require 'helm-config)
-          )
+     (use-package helm
+       :ensure t
+       :bind (("M-x" . helm-M-x)
+              ("C-x b" . helm-buffers-list)
+              ("C-x C-f" . helm-find-files))
+       :init
+       (setq helm-M-x-fuzzy-match t
+             helm-buffers-fuzzy-matching t
+             helm-recentf-fuzzy-match t
+             helm-lisp-fuzzy-completion t
+             helm-semantic-fuzzy-match t
+             helm-autoresize-max-height 0
+             helm-autoresize-min-height 20
+             helm-split-window-in-side-p t ;; open helm buffer inside current window, not occupy whole other window
+             ;; helm-move-to-line-cycle-in-source t ; move to end or beginning of source when reaching top or bottom of source
+             ;; helm-ff-search-library-in-sexp t ; search for library in `require` and `declare-function` sexp.
+             ;; helm-scroll-amount 8
+             ;; helm-ff-file-name-history-use-recentf t
+             ;; helm-mode-fuzzy-match t
+             )
+       :config
+       (helm-mode 1)
+       (require 'helm-config)
+       )
    #+END_SRC
 ** helm-ag
    #+BEGIN_SRC emacs-lisp
@@ -233,25 +260,29 @@
    #+END_SRC
 ** company
    #+begin_src emacs-lisp
-                    (use-package company
-                      :ensure t
-                      :config 
-          (global-company-mode)
-     (setq company-idle-delay 0.2)
-(setq company-show-numbers t)
-(setq company-tooltip-align-annotations t)
-
-               )
+     (use-package company
+       :ensure t
+       :config 
+       (global-company-mode)
+       (setq company-idle-delay 0.1)
+       (setq company-show-numbers t)
+       (setq company-tooltip-align-annotations t)
+       )
    #+end_src
 ** company-quickhelp
    Documentation popups for company
    #+begin_src emacs-lisp
-          (use-package company-quickhelp
-     :ensure t
-     :defer t
-:init
-(add-hook 'global-company-mode-hook #'company-quickhelp-mode))
-
+     (use-package company-quickhelp
+       :ensure t
+       :defer t
+       :init
+       (add-hook 'global-company-mode-hook 'company-quickhelp-mode))
+   #+end_src
+** flycheck
+   #+begin_src emacs-lisp
+     (use-package flycheck
+       :ensure t
+       :init (global-flycheck-mode))
    #+end_src
 ** protobuf-mode
    #+BEGIN_SRC emacs-lisp
@@ -272,16 +303,18 @@
    #+END_SRC
 ** doom-themes
    #+BEGIN_SRC emacs-lisp
-                    (use-package doom-themes
-                       :ensure t
-                       :config
-                           (setq doom-themes-enable-bold t
-                                 doom-themes-enable-italic t)
-                           (load-theme 'doom-dracula t)
-;; enable flashing mode-line on errors
-     (doom-themes-visual-bell-config)
-          (doom-themes-org-config)
-               )
+     (use-package doom-themes
+       :ensure t
+       :config
+       (setq doom-themes-enable-bold t
+             doom-themes-enable-italic t
+             )
+
+       (load-theme 'doom-dracula t)
+       ;; enable flashing mode-line on errors
+       (doom-themes-visual-bell-config)
+       (doom-themes-org-config)
+       )
    #+END_SRC
 ** gitignore-mode
    #+BEGIN_SRC emacs-lisp
@@ -289,28 +322,38 @@
    #+END_SRC
 ** dockerfile-mode and docker-compose-mode
    #+begin_src emacs-lisp
-          (use-package dockerfile-mode :defer t)
+     (use-package dockerfile-mode :defer t)
      (use-package docker-compose-mode :defer t)
    #+end_src
-
-   #+RESULTS:
-
-** zone
-   #+BEGIN_SRC emacs-lisp
-     (use-package zone
-        :config
-        (zone-when-idle 300))
-   #+END_SRC
-** zone-nyan
-   #+BEGIN_SRC emacs-lisp
-     (use-package zone-nyan :ensure t :config (setq zone-programs [zone-nyan]))
-   #+END_SRC
+** pyenv-mode
+   #+begin_src emacs-lisp
+     (use-package pyenv-mode
+          :ensure t
+          :config
+          (add-hook 'python-mode-hook 'pyenv-mode))
+   #+end_src
+** pyenv-mode-auto
+   #+begin_src emacs-lisp
+    (use-package pyenv-mode-auto :ensure t)
+   #+end_src
 ** python
    #+begin_src emacs-lisp
-                    (use-package python
-               :config
-          (setq python-indent-guess-indent-offset nil) ;; don't try to guess python indent offset
-     )
+     (use-package python
+       :interpreter ("python" . python-mode)
+       :init
+       (defun python-setup-shell ()
+         (if (executable-find "ipython") 
+             (progn (setq python-shell-interpreter "ipython")) (setq python-shell-interpreter "python3")))
+       :config
+       (add-hook 'python-mode-hook 'python-setup-shell)
+       (setq python-indent-guess-indent-offset nil) ;; don't try to guess python indent offset
+       (setq py-shell-name "python3")
+       (setq py-python-command "python3")
+       )
+   #+end_src
+** py-isort
+   #+begin_src emacs-lisp
+     (use-package py-isort :ensure t)
    #+end_src
 ** python-docstring
    #+begin_src emacs-lisp
@@ -318,11 +361,16 @@
      :hook ((python-mode . python-docstring-mode)))
    #+end_src
 
+** py-autopep8
+   #+begin_src emacs-lisp
+(use-package py-autopep8 :hook ((python-mode . py-autopep8-enable-on-save))
+   #+end_src
 ** blacken
    #+begin_src emacs-lisp
-          (use-package blacken
-     :hook ((python-mode . blacken-mode))
-)
+     (use-package blacken
+       :ensure t
+       :config
+       (add-hook 'python-mode-hook 'blacken-mode))
    #+end_src
 * Reload init.el
 #+BEGIN_SRC emacs-lisp
